--- a/projet7/index.html
+++ b/projet7/index.html
@@ -10,29 +10,35 @@
 <body>
     <div class="container">
         <div class="w-50 mx-auto mt-5">
-            <h1 class="display-4">Catalogue</h1>
+            <h1 class="display-4">Portfolio</h1>
             <div class="row row-cols-md-3 mt-5">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <img src="https://via.placeholder.com/550x150" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Livre</h5>
                         <p class="card-text">250.0 euros</p>
+                        <a class="btn btn-secondary" href="remove.html">Supprimer</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <img src="https://via.placeholder.com/150x50" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Voiture</h5>
                         <p class="card-text">100.0 euros</p>
+                        <a class="btn btn-secondary" href="remove.html">Supprimer</a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+                    <img src="https://via.placeholder.com/50x60" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Moto</h5>
                         <p class="card-text">250.0 euros</p>
+                        <a class="btn btn-secondary" href="remove.html">Supprimer</a>
                     </div>
                 </div>
+            </div>
+            <div class="mt-4">
+                <a class="btn btn-primary" href="add.html">Ajouter une photo</a>
             </div>
         </div>
     </div>
